<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/googleLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kuy_bg"
    tools:context=".ui.start.LoginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="@+id/googleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_play_circle_filled_24" />

    <EditText
        android:id="@+id/inputemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_email_"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email_username"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"/>

    <EditText
        android:id="@+id/inputpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputemail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputpassword" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/forgot_password"
        android:textColor="@color/header"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <TextView
        android:id="@+id/gotoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/register_now"
        android:textColor="@color/header"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>