<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:overScrollMode="never"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img_poster"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:riv_corner_radius="10dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toTopOf="@id/img_poster"
            tools:text="Data Name" />

        <TextView
            android:id="@+id/text_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintVertical_bias="0"
            tools:text="rate" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/descriptionription"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_poster"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:text="This is Moview" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommended_for_you"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0">

            <LinearLayout
                android:id="@+id/recommended"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:src="@drawable/httyd" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/kug" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/str" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/trans" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/trb" />
            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>